--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito); 
 
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
@@ -10,6 +10,7 @@
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
+ 
   --purple: #9561e2;
   --pink: #f66d9b;
   --red: #e3342f;
