--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Appland - v2.0.0
-* Template URL: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -14,11 +7,11 @@ body {
 }
 
 a {
-  color: #5777ba;
+  color:rgb(0,152,158);
 }
 
 a:hover {
-  color: #7b94c9;
+  color: rgb(226, 239,239);
   text-decoration: none;
 }
 
@@ -37,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   right: 15px;
   bottom: 15px;
-  background: #5777ba;
+  background: rgb(0,152,158);
   color: #fff;
   transition: display 0.5s ease-in-out;
   z-index: 99999;
@@ -82,8 +75,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #5777ba;
+  color: rgb(0,152,158);
   text-decoration: none;
+  font-family: 'Codystar', cursive;
 }
 
 #header .logo img {
@@ -118,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #47536e;
+  color:rgb(0,152,158);
   padding: 8px 15px 12px 15px;
   transition: 0.3s;
   font-size: 14px;
@@ -126,12 +120,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #5777ba;
+  color: rgb(231, 242,242);
   text-decoration: none;
 }
 
 .nav-menu .get-started a {
-  background: #5777ba;
+  background: rgb(0,152,158);
   color: #fff;
   border-radius: 50px;
   margin: 0 15px;
@@ -177,7 +171,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 .nav-menu .drop-down > a:after {
@@ -237,7 +231,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 .mobile-nav {
@@ -272,7 +266,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #5777ba;
+  color: rgb(0,152,158);
   text-decoration: none;
 }
 
@@ -354,7 +348,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 500;
   line-height: 56px;
-  color: #5777ba;
+  color: rgb(0,152,158);
   font-family: "Poppins", sans-serif;
 }
 
@@ -378,7 +372,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .download-btn:hover {
-  background: #5777ba;
+  background:rgb(0,152,158);
 }
 
 #hero .download-btn i {
@@ -450,7 +444,7 @@ section {
   font-weight: 400;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #5777ba;
+  color: rgb(0,152,158);
   font-family: "Poppins", sans-serif;
 }
 
@@ -478,7 +472,7 @@ section {
 .features .content .icon-box i {
   font-size: 48px;
   float: left;
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 .features .content .icon-box p {
@@ -527,7 +521,7 @@ section {
 .details .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 .details .content p:last-child {
@@ -560,7 +554,7 @@ section {
 }
 
 .gallery .owl-dot.active {
-  background-color: #5777ba !important;
+  background-color: rgb(0,152,158) !important;
 }
 
 .gallery .gallery-carousel {
@@ -573,7 +567,7 @@ section {
 
 @media (min-width: 992px) {
   .gallery .gallery-carousel .center {
-    border: 6px solid #5777ba;
+    border: 6px solid rgb(0,152,158);
     padding: 4px;
     background: #fff;
     z-index: 1;
@@ -659,7 +653,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #5777ba !important;
+  background-color: rgb(0,152,158) !important;
 }
 
 @media (max-width: 767px) {
@@ -699,7 +693,7 @@ section {
 
 .pricing h4 {
   font-size: 46px;
-  color: #5777ba;
+  color: rgb(0,152,158);
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 25px;
@@ -724,7 +718,7 @@ section {
 }
 
 .pricing ul i {
-  color: #5777ba;
+  color: rgb(0,152,158);
   font-size: 18px;
   padding-right: 4px;
 }
@@ -755,7 +749,7 @@ section {
 }
 
 .pricing .get-started-btn:hover {
-  background: #5777ba;
+  background: rgb(0,152,158);
 }
 
 .pricing .featured {
@@ -764,7 +758,7 @@ section {
 }
 
 .pricing .featured .get-started-btn {
-  background: #5777ba;
+  background: rgb(0,152,158);
 }
 
 .pricing .featured .get-started-btn:hover {
@@ -855,7 +849,7 @@ section {
 }
 
 .faq .accordion-list a.collapsed:hover {
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 .faq .accordion-list a.collapsed .icon-show {
@@ -965,7 +959,7 @@ section {
 }
 
 .contact .php-email-form input::focus, .contact .php-email-form textarea::focus {
-  background-color: #5777ba;
+  background-color: rgb(0,152,158);
 }
 
 .contact .php-email-form input {
@@ -978,16 +972,16 @@ section {
 
 .contact .php-email-form button[type="submit"] {
   background: #fff;
-  border: 2px solid #5777ba;
+  border: 2px solid rgb(0,152,158);
   padding: 10px 24px;
-  color: #5777ba;
+  color: rgb(0,152,158);
   transition: 0.4s;
   border-radius: 50px;
   margin-top: 5px;
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #5777ba;
+  background: rgb(0,152,158);
   color: #fff;
 }
 
@@ -1073,7 +1067,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #5777ba;
+  background: rgb(0,152,158);
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1154,13 +1148,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #5777ba;
+  color: rgb(0,152,158);
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #5777ba;
+  background: rgb(0,152,158);
   color: #fff;
   line-height: 1;
   padding: 8px 0;
