--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .get-started a:hover {
-  background: #748ec6;
+  background: rgb(158, 211, 212);
   color: #fff;
 }
 
@@ -171,7 +171,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: rgb(0,152,158);
+  color: rgb(158, 211, 212);
 }
 
 .nav-menu .drop-down > a:after {
@@ -339,7 +339,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 250%;
   height: 200%;
   z-index: -1;
-  background-color: #e8ecf5;
+  background-color: rgb(158, 211, 212);
   transform: skewY(135deg);
 }
 
@@ -356,34 +356,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #515f7d;
   margin-bottom: 50px;
   font-size: 20px;
-}
-
-#hero .download-btn {
-  font-family: "Raleway", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  display: inline-block;
-  padding: 8px 24px 10px 46px;
-  border-radius: 3px;
-  transition: 0.5s;
-  color: #fff;
-  background: #47536e;
-  position: relative;
-}
-
-#hero .download-btn:hover {
-  background:rgb(0,152,158);
-}
-
-#hero .download-btn i {
-  font-size: 20px;
-  position: absolute;
-  left: 18px;
-  top: 8.5px;
-}
-
-#hero .download-btn + .download-btn {
-  margin-left: 20px;
 }
 
 @media (max-width: 991px) {
@@ -825,7 +797,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #b1c0df;
+  color: rgb(158, 211, 212);
 }
 
 .faq .accordion-list .icon-show, .faq .accordion-list .icon-close {
@@ -871,7 +843,7 @@ section {
 --------------------------------------------------------------*/
 .contact .info {
   padding: 20px 40px;
-  background: #f1f3f6;
+  background: rgb(231, 242, 242);
   color: #47536e;
   text-align: center;
   border: 1px solid #fff;
@@ -879,7 +851,7 @@ section {
 
 .contact .info i {
   font-size: 48px;
-  color: #9fb2d8;
+  color: rgb(0,152,158);
   margin-bottom: 15px;
 }
 
@@ -949,7 +921,7 @@ section {
 .contact .php-email-form label {
   font-family: "Poppins", sans-serif;
   margin-bottom: 5px;
-  color: #8a8c95;
+  color: rgb(158, 211, 212);
 }
 
 .contact .php-email-form input, .contact .php-email-form textarea {
@@ -983,6 +955,11 @@ section {
 .contact .php-email-form button[type="submit"]:hover {
   background: rgb(0,152,158);
   color: #fff;
+}
+
+button[type="submit"]:active {
+  outline: none !important;
+  box-shadow: none;
 }
 
 @media (max-width: 1024px) {
@@ -1021,7 +998,7 @@ section {
 #footer {
   background: #fff;
   padding: 0 0 30px 0;
-  color: #47536e;
+  color: rgb(0,152,158);
   font-size: 14px;
   background: #eff2f8;
 }
@@ -1124,7 +1101,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #9fb2d8;
+  color: rgb(158, 211, 212);
   font-size: 18px;
   line-height: 1;
 }
@@ -1167,7 +1144,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #27282c;
+  background: rgb(158, 211, 212)sx;
   color: #fff;
   text-decoration: none;
 }
@@ -1192,3 +1169,4 @@ section {
     padding: 5px 0;
   }
 }
+
