--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,6 +19,44 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+ a[class="btn-link"] {
+  background: rgb(158, 211, 212);
+  color:rgb(0,152,158);
+  border-radius: 50px;
+  margin: 0 15px;
+  padding: 10px 25px;
+}
+ 
+a:hover[class="btn-link"] {
+  background: rgb(0,152,158);
+  color: #fff;
+  border-radius: 50px;
+  margin: 0 15px;
+  padding: 10px 25px;
+  text-decoration:none
+}
+
+button{
+  background: rgb(0,152,158);
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  margin: 0 15px;
+  padding: 10px 25px;
+}
+
+button:hover{
+  background: rgb(158, 211, 212);
+  color: #fff;
+}
+button:active, button:focus{
+  outline: none !important;
+   box-shadow: none;
+}
+
+
+
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -339,7 +377,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 250%;
   height: 200%;
   z-index: -1;
-  background-color: rgb(158, 211, 212);
+  background-color: rgb(0,152,158);
   transform: skewY(135deg);
 }
 
@@ -1149,17 +1187,18 @@ button[type="submit"]:active {
   text-decoration: none;
 }
 
+
 #footer .copyright {
   text-align: center;
   float: left;
-  color: #47536e;
+  color: rgb(0,152,158);
 }
 
 #footer .credits {
   float: right;
   text-align: center;
   font-size: 13px;
-  color: #47536e;
+  color: rgb(0,152,158);
 }
 
 @media (max-width: 768px) {
