--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito); 
+@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
@@ -6,14 +6,10 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- h1, h2, h3, p {
-  color: black;
-}
 
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
- 
   --purple: #9561e2;
   --pink: #f66d9b;
   --red: #e3342f;
